Tue Oct 14 16:23:04 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (global_symbols): make IDs immortal always, instead
	  of treating dynamic symbols as IDs.

	* iseq.c, marshal.c, string.c: use rb_str_intern instead of
	  rb_str_dynamic_intern.

	* symbol.c (rb_str_intern): rename rb_str_dynamic_intern.

Tue Oct 14 10:19:10 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_optimization.rb (test_string_freeze): new test
	  (test_hash_aref_with): ditto
	  (test_hash_aset_with): ditto

Tue Oct 14 01:27:54 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (nmin_run): max(n) and max_by(n) returns an array in
	  descending order.
	  [ruby-core:65452] Suggested by David Grayson.

Mon Oct 13 20:44:49 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (update-gems): chdir to the target directory and then
	  add the tool directory to load paths, for older BASERUBY.
	  [Bug #10372][ruby-core:65630]

Mon Oct 13 17:53:01 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/xmlrpc/parser.rb: added new parser class using libxml-ruby gem.
	  [Feature #9379][ruby-core:59633]
	* lib/xmlrpc/config.rb: ditto.

Mon Oct 13 16:32:56 2014  Tanaka Akira  <akr@fsij.org>

	* lib/find.rb (Find.find): Call to_path for arguments to obtain
	  strings.
	  [ruby-core:63713] [Bug #10035] Reported by Herwin.

Mon Oct 13 15:42:25 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* common.mk: use relative load path for bundled_gems directory.
	  [Bug #10372][ruby-core:65630]

Mon Oct 13 08:44:06 2014  Zachary Scott  <e@zzak.io>

	* README.EXT: [DOC] fix example missing typedef with patch by
	  @steveklabnik [Fixes GH-739] https://github.com/ruby/ruby/pull/739

	* README.EXT.ja: ditto.

Mon Oct 13 06:52:09 2014  Eric Wong  <e@80x24.org>

	* array.c (ary_recycle_hash): add RB_GC_GUARD
	  (rb_ary_diff): remove volatile
	  [Bug #10369]

Mon Oct 13 03:20:23 2014  Zachary Scott  <e@zzak.io>

	* ext/date/date_core.c: [DOC] Clean up whitespace, examples, and typos